--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.533.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-google-places-autocomplete": "^4.1.0",
+    "react-router-dom": "^7.7.1",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
