--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.533.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "next-themes": "^0.4.6",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-google-places-autocomplete": "^4.1.0",
     "react-router-dom": "^7.7.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11"
   },
